--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@
 #    pip-compile --no-index --output-file requirements.txt requirements.in
 #
 figcan==0.0.4
-pyyaml==3.13
+pyyaml==5.1
 pyzmq==17.1.2
-typing==3.6.*; python_version < '3.0'
+typing==3.6.6 ; python_version < "3.0"
