--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: python
 
-env:
-  - MYPY_FLAG="--mypy"
-
 matrix:
   include:
     - python: 2.7
-      env: MYPY_FLAG=""
     - python: 3.5
     - python: 3.6
     - python: 3.7
@@ -18,4 +14,4 @@ install:
   - make prepare-test
 
 script:
-  - make test MYPY_FLAG=$MYPY_FLAG
+  - make test
