--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ matrix:
     - python: 3.5
     - python: 3.6
     - python: 3.7
-      dist: xenial
-      sudo: true
+    - python: 3.8
+#      dist: xenial
+#      sudo: true
 
 install:
   - pip install --upgrade pip pip-tools
